--- a/_config.yml
+++ b/_config.yml
@@ -79,13 +79,13 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : intensedebate
     disqus :
       short_name : jekyllbootstrap
     livefyre :
       site_id : 123
     intensedebate :
-      account : 123abc
+      account : colapiggy
     facebook :
       appid : 123
       num_posts: 5
